# liegroups

./: CMakeLists.txt  Makefile  common.mk  exp_coefs.cpp  matrix.cpp  matrix.hpp  matrix_impl.hpp  scalar.hpp  se2.cpp  se2.hpp  se2_io.cpp  se3.cpp  se3.hpp  se3_io.cpp  sim2.cpp  sl3.cpp  so3.cpp  so3.hpp  spline.cpp  spline.hpp  spline_io.cpp
arch/x86-linux/: Makefile
arch/x86-linux/test/: Makefile
arch/x86-win32/: Makefile  common.mk
arch/x86-win32/test/: Makefile
test/: CMakeLists.txt  Makefile  expm.cpp  main.cpp  spline_test.cpp  test_helpers.hpp
