CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_LEGACY_CYGWIN_WIN32 0)

PROJECT(liegroups)

INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/..")

IF(CMAKE_COMPILER_IS_GNUCXX)
  SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -finline-functions")
ENDIF(CMAKE_COMPILER_IS_GNUCXX)

FILE(GLOB headers "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp")
FILE(GLOB sources "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")

ADD_LIBRARY(liegroups STATIC
  ${headers}
  ${sources}
)

INSTALL(TARGETS liegroups
  RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
  LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
  ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
)

INSTALL(FILES ${headers} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/liegroups)

ADD_SUBDIRECTORY(test)
